update reaed me

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -13,7 +13,7 @@
 </head>
 <body>
     <h1 class="title"><%= htmlWebpackPlugin.options.title %></h1>
-    <h1 class="subtitle">this is a subtitle</h1>
+    <h1 class="subtitle">A minimalistic PWA boilerplate based on Webpack 3, Preact and Typescript with performance in mind</h1>
     <div id="preact-clock"></div>
     <script>
         if ('serviceWorker' in navigator) {
