--- a/src/index.ejs
+++ b/src/index.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta name="description" content="<%= htmlWebpackPlugin.options.description %>"/>
     <meta name="theme-color" content="#fff">
     <link rel="manifest" href="./manifest.json">
     <% for(var i=0; i<htmlWebpackPlugin.options.preload.length; i++) { %>
