--- a/src/index.ejs
+++ b/src/index.ejs
@@ -69,7 +69,7 @@
   <script>
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', () => {
-      navigator.serviceWorker.register('/sw.js').then(registration => {
+      navigator.serviceWorker.register('/pwa-preact/sw.js').then(registration => {
         console.log('SW registered: ', registration);
         registration.pushManager.subscribe({userVisibleOnly: true});
       }).catch(registrationError => {
