--- a/src/styles/home.style.scss
+++ b/src/styles/home.style.scss
@@ -3,4 +3,9 @@
 #textarea {
     width: 100%;
     height: 200px;
+    font-size: 16px;
+    padding: 10px;
+    border: 2px solid lightblue;
+    font-family: monospace;
+    background: #f6f8f9;
 }
